[gd_scene load_steps=5 format=3 uid="uid://dksgjjd2ovuuj"]

[ext_resource type="Script" path="res://scripts/shop_menu.gd" id="1_iqjif"]
[ext_resource type="Texture2D" uid="uid://oj5s0xes1ums" path="res://assets/visual/misc/text_background_ninepatch.png" id="2_jjf0g"]
[ext_resource type="Texture2D" uid="uid://bmve4xg4maqeu" path="res://assets/visual/misc/text_exit.png" id="3_rkqyv"]
[ext_resource type="Texture2D" uid="uid://b7kv1m7p0k2ka" path="res://assets/visual/upgrades/currency_coin.png" id="4_06mci"]

[node name="shop_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iqjif")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(500, 500)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jjf0g")
patch_margin_left = 7
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 7

[node name="menu_title" type="Label" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 18.0
offset_right = 20.0
offset_bottom = 41.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Menu Title"

[node name="TextureButton" type="TextureButton" parent="NinePatchRect"]
layout_mode = 0
offset_left = 484.0
offset_top = -11.0
offset_right = 518.0
offset_bottom = 21.0
texture_normal = ExtResource("3_rkqyv")

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect"]
custom_minimum_size = Vector2(450, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -200.0
offset_right = 225.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 2

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/ScrollContainer"]
custom_minimum_size = Vector2(450, 600)
layout_mode = 2
theme_override_constants/h_separation = 150
theme_override_constants/v_separation = 300
columns = 3

[node name="confirmation box" type="NinePatchRect" parent="."]
visible = false
z_index = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jjf0g")
region_rect = Rect2(0, 0, 32, 32)
patch_margin_left = 7
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 7

[node name="confimation_title" type="Label" parent="confirmation box"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -52.5
offset_top = 7.0
offset_right = 52.5
offset_bottom = 33.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Are you sure?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="confirm_selections" type="HBoxContainer" parent="confirmation box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.0
offset_top = -27.0
offset_right = 52.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="yes" type="Button" parent="confirmation box/confirm_selections"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Yes"

[node name="no" type="Button" parent="confirmation box/confirm_selections"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "No"

[node name="currency_notice" type="HBoxContainer" parent="confirmation box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = 17.0
offset_right = 42.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="currency_image" type="TextureRect" parent="confirmation box/currency_notice"]
layout_mode = 2
texture = ExtResource("4_06mci")
expand_mode = 2

[node name="cost" type="Label" parent="confirmation box/currency_notice"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "- 300 "

[connection signal="pressed" from="NinePatchRect/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="confirmation box/confirm_selections/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="confirmation box/confirm_selections/no" to="." method="_on_no_pressed"]
